--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
     "aws-sdk": "^2.1030.0",
     "bcryptjs": "^2.4.3",
     "colors": "^1.4.0",
+    "cookie": "^0.4.1",
     "cookie-parser": "^1.4.5",
     "dotenv": "^8.6.0",
     "express": "^4.17.1",
