--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
     "dev": "nodemon ./bin/www"
   },
   "dependencies": {
+    "aws-sdk": "^2.1030.0",
     "bcryptjs": "^2.4.3",
     "colors": "^1.4.0",
     "cookie-parser": "^1.4.5",
@@ -21,8 +22,11 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.8",
     "morgan": "^1.10.0",
+    "multer": "^1.4.3",
+    "multer-s3": "^2.10.0",
     "nodemon": "^2.0.6",
     "socket.io": "^4.1.0",
+    "streamsearch": "^0.1.2",
     "stripe": "^8.191.0"
   },
   "devDependencies": {
