--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.58",
+    "@material-ui/pickers": "^3.3.10",
     "@mui/lab": "^5.0.0-alpha.55",
     "@mui/material": "^5.1.1",
     "@testing-library/jest-dom": "^5.11.9",
