--- a/client/.eslintrc
+++ b/client/.eslintrc
@@ -7,7 +7,7 @@
   "extends": [
     "plugin:@typescript-eslint/recommended",
     "plugin:react/recommended",
-    "plugin:prettier/recommended",
+    // "plugin:prettier/recommended",
     "plugin:react-hooks/recommended"
   ],
   "settings": {
